About content overflow issue

--- a/app/styles/views/about/components/_content.scss
+++ b/app/styles/views/about/components/_content.scss
@@ -11,7 +11,6 @@
   border-radius: 4px;
   color: rgba(250,250,250,0.9);
   text-align: center;
-  overflow: auto;
   .about {
     text-shadow: #333 1px 1px 10px, #333 1px 1px 10px;
     border: 1px solid $contrastColor;
